--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -126,6 +126,7 @@ html {
 body {
   font-size: $font-body;
   background-color: var(--light);
+  color: var(--dark);
 
   overflow-x: hidden;
   width: 100vw;
@@ -133,3 +134,7 @@ body {
 
 html, body { height: 100%; }
 body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-typography {
+  font: 1em sans-serif;
+}
